--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "history": "^5.0.0",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
