--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "cd ../client && npm install && npm run build",
     "dev": "nodemon index.js"
   },
   "keywords": [],
