--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "history": "^5.0.0",
+    "jest": "^26.6.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
